Feature extraction markdown

--- a/index.ipynb
+++ b/index.ipynb
@@ -763,7 +763,8 @@
    "metadata": {},
    "source": [
     "### Feature Extraction\n",
-    "This will involve extracting the acostic features from the preprocessed audio data that captured the key characteristics related to the emotion, such as pitch,intensity and the spectoral properties."
+    "\n",
+    "In this section we will extract acoustic features from the preprocessed audio data that captures the key characteristics related to the emotion, such as pitch,intensity and the spectoral properties."
    ]
   },
   {
@@ -800,7 +801,29 @@
    "id": "2dbecda2",
    "metadata": {},
    "source": [
-    "The function above extracts various audio features from an audio file and  includes MFCCs, pitch, energy, and spectral features,  this provides a comprehensive representation of the audio characteristics in our dataframe"
+    "The function above extracts various audio features from an audio file and  includes MFCCs, pitch, energy, and spectral features,  this provides a comprehensive representation of the audio characteristics in our dataframe.\n",
+    "\n",
+    "### Audio Feature Extraction Steps:\n",
+    "\n",
+    "1. **Load Audio File**:\n",
+    "   - The code uses the `librosa.load()` function to load the audio file specified by `file_path`.\n",
+    "   - It returns the audio waveform `y` and the sample rate `sr`.\n",
+    "\n",
+    "2. **Extract MFCCs (Mel-Frequency Cepstral Coefficients)**:\n",
+    "   - MFCCs are extracted using the `librosa.feature.mfcc()` function.\n",
+    "   - `n_mfcc=13` specifies the number of MFCC coefficients to extract.\n",
+    "\n",
+    "3. **Calculate Pitch**:\n",
+    "   - Pitch is calculated using the `librosa.piptrack()` function.\n",
+    "   - The mean pitch value is calculated from the obtained pitches.\n",
+    "\n",
+    "4. **Calculate Energy**:\n",
+    "   - Energy is calculated using the root mean square (RMS) of the audio signal.\n",
+    "   - It's calculated using `librosa.feature.rms()`.\n",
+    "\n",
+    "5. **Calculate Spectral Features**:\n",
+    "   - Spectral Centroid, Spectral Bandwidth, and Spectral Contrast are calculated using `librosa.feature` functions.\n",
+    "   - They represent different aspects of the frequency content of the audio signal."
    ]
   },
   {
@@ -830,11 +853,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "74211bd7",
+   "id": "add120df",
    "metadata": {},
    "source": [
-    "The main goal of the code above is to extract features from each audio file and combine these features into a single 1D array for further analysis. The arrays represents the combined features for a specific audio file\n",
-    "\n"
+    "**Flattening and Combining Features**: MFCCs are flattened to ensure a consistent shape. All features are combined into a single 1D array for further analysis. The arrays represents the combined features for a specific audio file."
    ]
   },
   {
@@ -882,10 +904,10 @@
   },
   {
    "cell_type": "markdown",
-   "id": "af9c5f77",
+   "id": "9833a1f1",
    "metadata": {},
    "source": [
-    "The code  above is focused on ensuring that the extracted audio features, particularly the MFCC arrays, have consistent shapes for further processing."
+    "**Padding MFCC Arrays**: MFCC arrays are padded with zeros to ensure consistent shapes across all arrays for further processing."
    ]
   },
   {
@@ -920,19 +942,23 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f572ba0",
+   "cell_type": "markdown",
+   "id": "292817c6",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "**Splitting the Data**: The data is split into training, validation, and testing sets using `train_test_split` from `sklearn.model_selection`.\n",
+    "\n",
+    "**Displaying Data Shapes**: The shapes of the training, validation, and testing datasets are displayed for reference.\n",
+    "\n",
+    "This section sets the stage for training machine learning models using the extracted audio features."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (learn-env)",
+   "display_name": "base",
    "language": "python",
-   "name": "learn-env"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -944,7 +970,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.11.5"
   }
  },
  "nbformat": 4,
