Updated EDA markdown

--- a/index.ipynb
+++ b/index.ipynb
@@ -16,7 +16,7 @@
    "id": "b938ccf2",
    "metadata": {},
    "source": [
-    "### objectives\n",
+    "### Objectives\n",
     "1.\tTo develop an end-to-end Speech Emotion Recognition system using machine learning techniques to automatically detect and classify the emotional states of customers during phone calls. The system should be capable of analyzing speech signals in real time and categorizing emotions such as happiness, sadness, anger, and neutrality with high accuracy.\n",
     "2. To improve the quality of customer-agent interactions by providing agents with timely insights into customers' emotional states, fostering better communication and rapport during calls.\n",
     "3.\tTo enhance the company's reputation for customer-centricity by leveraging advanced emotion detection technology to offer tailored solutions and support based on the emotional needs of individual customers."
@@ -53,6 +53,14 @@
     "import uuid\n",
     "import librosa\n",
     "import numpy as np\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e63c9e53",
+   "metadata": {},
+   "source": [
+    "### Loading Data"
    ]
   },
   {
@@ -315,7 +323,15 @@
    "id": "dbb1ba03",
    "metadata": {},
    "source": [
-    "### EDA"
+    "### Exploratory Data Analysis"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55bce088",
+   "metadata": {},
+   "source": [
+    "We will first plot the count of each emotion in our dataset."
    ]
   },
   {
@@ -345,6 +361,23 @@
     "plt.xlabel('Emotion')\n",
     "plt.ylabel('Count')\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "aa061324",
+   "metadata": {},
+   "source": [
+    "We will also plot:\n",
+    "waveplots which are visual representations of the audio signals and the spectograms which display the frequency content of audio signals as they vary over time."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e98f8a82",
+   "metadata": {},
+   "source": [
+    "**Waveplot and Spectrogram: Fear Emotion**"
    ]
   },
   {
@@ -422,6 +455,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "765801ff",
+   "metadata": {},
+   "source": [
+    "**Waveplot and Spectrogram: Sad Emotion**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "id": "72779069",
@@ -475,6 +516,14 @@
     "waveplot(data, sampling_rate, emotion)\n",
     "spectrogram(data, sampling_rate, emotion)\n",
     "Audio(data, rate=sampling_rate)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5c241360",
+   "metadata": {},
+   "source": [
+    "**Waveplot and Spectrogram: Happy Emotion**"
    ]
   },
   {
@@ -534,6 +583,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bb4df29b",
+   "metadata": {},
+   "source": [
+    "**Waveplot and Spectrogram: Disgust Emotion**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "id": "288d774e",
@@ -587,6 +644,14 @@
     "waveplot(data, sampling_rate, emotion)\n",
     "spectrogram(data, sampling_rate, emotion)\n",
     "Audio(data, rate=sampling_rate)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "07685929",
+   "metadata": {},
+   "source": [
+    "**Waveplot and Spectrogram: Angry Emotion**"
    ]
   },
   {
@@ -646,6 +711,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8c60450b",
+   "metadata": {},
+   "source": [
+    "**Waveplot and Spectrogram: Neutral Emotion**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 12,
    "id": "c9210283",
@@ -699,6 +772,14 @@
     "waveplot(data, sampling_rate, emotion)\n",
     "spectrogram(data, sampling_rate, emotion)\n",
     "Audio(data, rate=sampling_rate)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a7b1d210",
+   "metadata": {},
+   "source": [
+    "**Waveplot and Spectrogram: Pleasantly surprised emotion**"
    ]
   },
   {
@@ -803,7 +884,7 @@
    "source": [
     "The function above extracts various audio features from an audio file and  includes MFCCs, pitch, energy, and spectral features,  this provides a comprehensive representation of the audio characteristics in our dataframe.\n",
     "\n",
-    "### Audio Feature Extraction Steps:\n",
+    "#### Audio Feature Extraction Steps:\n",
     "\n",
     "1. **Load Audio File**:\n",
     "   - The code uses the `librosa.load()` function to load the audio file specified by `file_path`.\n",
@@ -908,6 +989,14 @@
    "metadata": {},
    "source": [
     "**Padding MFCC Arrays**: MFCC arrays are padded with zeros to ensure consistent shapes across all arrays for further processing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "562222dd",
+   "metadata": {},
+   "source": [
+    "### Baseline Model"
    ]
   },
   {
