--- a/index_(1).ipynb
+++ b/index_(1).ipynb
@@ -3,8 +3,8 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "colab_type": "text",
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/miriamnguru/Speech-Recognition-Project/blob/main/index_(1).ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -344,13 +344,13 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "We will first plot the count of each emotion in our dataset"
-      ],
+      "id": "6VXzwAZ3a03-",
       "metadata": {
         "id": "6VXzwAZ3a03-"
       },
-      "id": "6VXzwAZ3a03-"
+      "source": [
+        "We will first plot the count of each emotion in our dataset."
+      ]
     },
     {
       "cell_type": "code",
@@ -386,22 +386,14 @@
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "We will also plot:\n",
-        "waveplots which are visual representations of the audio signals and the spectograms which display the frequency content of audio signals as they vary over time.\n"
-      ],
+      "id": "A6b3jZRWbIqH",
       "metadata": {
         "id": "A6b3jZRWbIqH"
       },
-      "id": "A6b3jZRWbIqH"
-    },
-    {
-      "cell_type": "markdown",
-      "source": [],
-      "metadata": {
-        "id": "4JS7HLQRcD7c"
-      },
-      "id": "4JS7HLQRcD7c"
+      "source": [
+        "We will also plot:\n",
+        "waveplots which are visual representations of the audio signals and the spectograms which display the frequency content of audio signals as they vary over time.\n"
+      ]
     },
     {
       "cell_type": "code",
@@ -1052,6 +1044,10 @@
     }
   ],
   "metadata": {
+    "colab": {
+      "include_colab_link": true,
+      "provenance": []
+    },
     "kernelspec": {
       "display_name": "base",
       "language": "python",
@@ -1068,10 +1064,6 @@
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
       "version": "3.11.5"
-    },
-    "colab": {
-      "provenance": [],
-      "include_colab_link": true
     }
   },
   "nbformat": 4,
