--- a/index.ipynb
+++ b/index.ipynb
@@ -41,6 +41,18 @@
   },
   {
    "cell_type": "markdown",
+   "id": "cd14d947",
+   "metadata": {},
+   "source": [
+    "#### OVERVIEW\n",
+    "1. Importing Libraries and Loading Data\n",
+    "2. Data Understanding\n",
+    "3. Exploratory Data Analysis\n",
+    "4. Modeling"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "705a6cb4",
    "metadata": {},
    "source": [
@@ -483,11 +495,21 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa061324",
+   "id": "223a9f09",
    "metadata": {},
    "source": [
-    "We will also plot:\n",
-    "waveplots which are visual representations of the audio signals and the spectograms which display the frequency content of audio signals as they vary over time."
+    "The emotions are further categorized as follows:\n",
+    "\n",
+    "\n",
+    "1. `angry`(400 data points): This category contains recordings of the target words spoken with an angry emotion.\n",
+    "2. `disgust` (400 data points): The dataset includes recordings of the target words spoken with a disgust emotion.\n",
+    "3. `fear` (400 data points): Audio files in this category capture the target words with a fear emotion\n",
+    "4. `happy` (400 data points): The dataset includes audio files where the target words are expressed with a happy emotion.\n",
+    "5. `neutral` (400 data points): This category contains audio recordings of neutral emotion\n",
+    "6. `pleasantly surprised` (400 data points): This category is different to the happy emotion, expressing some joy in the unexpected situation.\n",
+    "7. `sad` (400 data points): This category comprises audio files of the target words expressed with a sad emotion.\n",
+    "\n",
+    "This count plot provides a clear visual representation of the distribution of emotions in the dataset, allowing for easy interpretation and analysis of the data."
    ]
   },
   {
@@ -495,7 +517,10 @@
    "id": "e98f8a82",
    "metadata": {},
    "source": [
-    "**Waveplot and Spectrogram: Fear Emotion**"
+    "#### Waveplot and Spectrogram: Fear Emotion\n",
+    "Next, we'll visually explore the dataset to gain more insights into the audio by use of **wave plots** and **spectrograms** for each emotion.\n",
+    "\n",
+    "##### 1. Fear Emotion\n"
    ]
   },
   {
@@ -577,7 +602,7 @@
    "id": "765801ff",
    "metadata": {},
    "source": [
-    "**Waveplot and Spectrogram: Sad Emotion**"
+    "##### 2. Sad Emotion"
    ]
   },
   {
@@ -641,7 +666,7 @@
    "id": "5c241360",
    "metadata": {},
    "source": [
-    "**Waveplot and Spectrogram: Happy Emotion**"
+    "##### 3. Happy Emotion"
    ]
   },
   {
@@ -705,7 +730,7 @@
    "id": "bb4df29b",
    "metadata": {},
    "source": [
-    "**Waveplot and Spectrogram: Disgust Emotion**"
+    "##### 4. Disgust Emotion"
    ]
   },
   {
@@ -769,7 +794,7 @@
    "id": "07685929",
    "metadata": {},
    "source": [
-    "**Waveplot and Spectrogram: Angry Emotion**"
+    "##### 5. Angry Emotion"
    ]
   },
   {
@@ -833,7 +858,7 @@
    "id": "8c60450b",
    "metadata": {},
    "source": [
-    "**Waveplot and Spectrogram: Neutral Emotion**"
+    "##### 6. Neutral Emotion"
    ]
   },
   {
@@ -897,7 +922,7 @@
    "id": "a7b1d210",
    "metadata": {},
    "source": [
-    "**Waveplot and Spectrogram: Pleasantly surprised emotion**"
+    "##### 7. Pleasantly surprised emotion"
    ]
   },
   {
@@ -954,6 +979,22 @@
     "waveplot(data, sampling_rate, emotion)\n",
     "spectrogram(data, sampling_rate, emotion)\n",
     "Audio(data, rate=sampling_rate)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "390f5e82",
+   "metadata": {},
+   "source": [
+    "The wave plots represented by a default color **blue** show the amplitude of the audio signals at each point and time. From the visualization, the plots represent **time** on the *X-axis*, and the *Y-axis* represents the frequency.\n",
+    "\n",
+    "\n",
+    "The spectrograms display the **energy** levels of the audio signal at **different frequencies** over **time**.\n",
+    "\n",
+    "The amplitude in the spectrogram is the contrast between the background and color of sound spectra. The warmer colors like `yellow`, `orange`, and `red` represent **higher amplitudes** while `blue` and `purple` represent **lower amplitude**. Brighter or more saturated colors indicated **higher** energy or amplitude.\n",
+    "\n",
+    "\n",
+    "The *X-axis* represents time in seconds. This shows how long a given sound lasts while the *y-axis* represents the frequency which is the number of sound wave cycles that are transmitted per second and is measured in **hertz**."
    ]
   },
   {
