--- a/index.ipynb
+++ b/index.ipynb
@@ -1076,6 +1076,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "3b4b5321",
+   "metadata": {},
+   "source": [
+    "The function above extracts various audio features from an audio file and  includes MFCCs, pitch, energy, and spectral features,  this provides a comprehensive representation of the audio characteristics in our dataframe.\n",
+    "\n",
+    "#### Audio Feature Extraction Steps:\n",
+    "\n",
+    "1. **Load Audio File**:\n",
+    "   - The code uses the `librosa.load()` function to load the audio file specified by `file_path`.\n",
+    "   - It returns the audio waveform `y` and the sample rate `sr`.\n",
+    "\n",
+    "2. **Extract MFCCs (Mel-Frequency Cepstral Coefficients)**:\n",
+    "   - MFCCs are extracted using the `librosa.feature.mfcc()` function.\n",
+    "   - `n_mfcc=13` specifies the number of MFCC coefficients to extract.\n",
+    "\n",
+    "3. **Calculate Pitch**:\n",
+    "   - Pitch is calculated using the `librosa.piptrack()` function.\n",
+    "   - The mean pitch value is calculated from the obtained pitches.\n",
+    "\n",
+    "4. **Calculate Energy**:\n",
+    "   - Energy is calculated using the root mean square (RMS) of the audio signal.\n",
+    "   - It's calculated using `librosa.feature.rms()`.\n",
+    "\n",
+    "5. **Calculate Spectral Features**:\n",
+    "   - Spectral Centroid, Spectral Bandwidth, and Spectral Contrast are calculated using `librosa.feature` functions.\n",
+    "   - They represent different aspects of the frequency content of the audio signal."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 18,
    "id": "71890033",
@@ -1138,36 +1168,6 @@
     "\n",
     "#plot spectrogram and waveplot of processed audio\n",
     "plot_spectrogram_and_waveplot(original_audio, sr, 'Processed')\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "2dbecda2",
-   "metadata": {},
-   "source": [
-    "The function above extracts various audio features from an audio file and  includes MFCCs, pitch, energy, and spectral features,  this provides a comprehensive representation of the audio characteristics in our dataframe.\n",
-    "\n",
-    "#### Audio Feature Extraction Steps:\n",
-    "\n",
-    "1. **Load Audio File**:\n",
-    "   - The code uses the `librosa.load()` function to load the audio file specified by `file_path`.\n",
-    "   - It returns the audio waveform `y` and the sample rate `sr`.\n",
-    "\n",
-    "2. **Extract MFCCs (Mel-Frequency Cepstral Coefficients)**:\n",
-    "   - MFCCs are extracted using the `librosa.feature.mfcc()` function.\n",
-    "   - `n_mfcc=13` specifies the number of MFCC coefficients to extract.\n",
-    "\n",
-    "3. **Calculate Pitch**:\n",
-    "   - Pitch is calculated using the `librosa.piptrack()` function.\n",
-    "   - The mean pitch value is calculated from the obtained pitches.\n",
-    "\n",
-    "4. **Calculate Energy**:\n",
-    "   - Energy is calculated using the root mean square (RMS) of the audio signal.\n",
-    "   - It's calculated using `librosa.feature.rms()`.\n",
-    "\n",
-    "5. **Calculate Spectral Features**:\n",
-    "   - Spectral Centroid, Spectral Bandwidth, and Spectral Contrast are calculated using `librosa.feature` functions.\n",
-    "   - They represent different aspects of the frequency content of the audio signal."
    ]
   },
   {
@@ -1263,7 +1263,7 @@
     "padded_audio_features_array = np.array(padded_audio_features)\n",
     "\n",
     "print(padded_audio_features_array.shape)  # Display the shape of the padded array\n",
-    "# print(padded_audio_features_array[:5])     # Display the first 5 elements of the padded array\n",
+    "print(padded_audio_features_array[:5])     # Display the first 5 elements of the padded array\n",
     "\n",
     "def preprocess_emotional_dataframe(df, padded_features_array):\n",
     "    # Make a copy of the DataFrame to store processed data\n",
@@ -1556,6 +1556,32 @@
     "\n",
     "# Convert the \"Processed Features\" column to a NumPy array\n",
     "X_array = np.array(list(X))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "cfb59b8c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    [-389.6573181152344, -298.1921081542969, -258....\n",
+       "1    [-404.20367431640625, -303.85797119140625, -24...\n",
+       "2    [-411.5382080078125, -332.3244323730469, -282....\n",
+       "3    [-450.51348876953125, -342.32659912109375, -27...\n",
+       "4    [-499.8638916015625, -490.8980407714844, -434....\n",
+       "Name: Processed Features, dtype: object"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head()"
    ]
   },
   {
@@ -1913,6 +1939,32 @@
    "source": [
     "#### Testing the tuned model and visualizing using Confusion Matrix\n",
     "Lets use a confusion matrix to visualize the accuracy of our model."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "id": "27cdbbb4",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1938    happy\n",
+       "1961      sad\n",
+       "93      angry\n",
+       "1748     fear\n",
+       "407       sad\n",
+       "Name: Emotion, dtype: object"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_test.head()"
    ]
   },
   {
